# bazel-typescript-starter

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json  tsconfig.json
app/: WORKSPACE.bazel  package.json
app/src/: BUILD.bazel  index.dev.html  index.ts  tsconfig.json
app/src/assets/: BUILD.bazel
app/src/styles/: styles.scss
client/: package.json
client/src/: BUILD.bazel  index.dev.html
server/: package.json
server/src/: BUILD.bazel  index.ts  tsconfig.json
