# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files

alias(
    name = "dev-client",
    actual = "//client/src:ts-server",
)

alias(
    name = "dev-server",
    actual = "//server/src:ts-server",
)

alias(
    name = "client-package",
    actual = "//client/src:package",
)

alias(
    name = "server-package",
    actual = "//server/src:package",
)