load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/terser:index.bzl", "terser_minified")
load("@npm//@bazel/typescript:index.bzl", "ts_devserver", "ts_library", "ts_project")
load("@npm//html-insert-assets:index.bzl", "html_insert_assets")
load("@npm//http-server:index.bzl", "http_server")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "scss",
    src = "styles/styles.scss"
)

ts_library(
    name = "app",
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@types"
    ],
    srcs = ["index.ts"],
)

rollup_bundle(
    name = "bundle",
    entry_point = ":index.ts",
    deps = [":app"],
)

terser_minified(
    name = "bundle.min",
    src = ":bundle",
)

_ASSETS = [
    ":bundle.min",
    ":styles/styles.css"
]

html_insert_assets(
    name = "inject_tags",
    outs = ["index.html"],
    args = [
        "--out=$@",
        "--html=$(execpath :index.dev.html)",
        "--roots=$(RULEDIR)",
        "--assets",
    ] + ["$(execpaths %s)" % a for a in _ASSETS],
    data = [":index.dev.html"] + _ASSETS,
)

pkg_web(
    name = "package",
    srcs = _ASSETS + [
        ":assets",
        "index.html",
    ],
)

ts_devserver(
    name = "devserver",
    deps = [":app"],
    static_files = _ASSETS + [
        "//app/src/assets",
        ":inject_tags",
    ],
)
