load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/terser:index.bzl", "terser_minified")
load("@npm//@bazel/typescript:index.bzl", "ts_devserver", "ts_library", "ts_project")
load("@npm//html-insert-assets:index.bzl", "html_insert_assets")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "scss-client",
    src = "styles/styles.scss",
    sourcemap = False
)

ts_library(
    name = "ts-client",
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@types"
    ],
    srcs = ["index.ts"],
)

rollup_bundle(
    name = "bundle",
    entry_point = ":index.ts",
    deps = [":ts-client"],
)

terser_minified(
    name = "bundle.min",
    src = ":bundle",
)

_ASSETS = [
    ":bundle.min",
    ":styles/styles.css"
]

html_insert_assets(
    name = "inject",
    outs = ["index.html"],
    args = [
        "--out=$@",
        "--html=$(execpath :index.dev.html)",
        "--roots=$(RULEDIR)",
        "--assets",
    ] + ["$(execpaths %s)" % a for a in _ASSETS],
    data = [":index.dev.html"] + _ASSETS,
)

pkg_web(
    name = "prod",
    srcs = _ASSETS + [
        ":assets",
        "index.html",
    ],
)

ts_devserver(
    name = "devserver",
    deps = [":ts-client"],
    static_files = _ASSETS + [
        "//client/src/assets",
        ":inject",
    ],
)